# gmm2json

./: .gitignore  CMakeLists.txt  Makefile  README.md  create.sh  defs.c  defs.h  dynarray.h  gmm_file.c  gmm_file.h  main.c
